Fixed scaling causing controls to be covered

--- a/src/components/Minesweeper/Board/Board.css
+++ b/src/components/Minesweeper/Board/Board.css
@@ -1,5 +1,7 @@
 .board {
     display: inline-block;
+
+    transform-origin: top;
 }
 
 .board > .board-contents {
